initial commit, part deux

--- a/index.html
+++ b/index.html
@@ -9,8 +9,28 @@
 </head>
 <body>
 
-  <h1>Welcome to Portumna Rugby Club</h1>
-  
+  <header class="header">
+    <div class="layout-contained">
+      <div class="header__inner">
+        <div class="logo">Logo</div>
+        <nav>Menu</nav>
+      </div>
+    </div>
+  </header>
+
+  <main>
+    Main content.
+  </main>
+
+  <footer class="footer">
+    <div class="layout-contained padding-horizontal">
+      <div class="footer__inner">
+        <div class="footer__item footer__item--postal">Postal Address</div>
+        <div class="footer__item footer__item--contact">Contact</div>
+        <div class="footer__item footer__item--pitch">Pitch Address</div>
+      </div>
+    </div>
+  </footer>
   <script src="script.js"></script>
 </body>
 </html>
